--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -19,11 +19,11 @@
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Arrival and Setup</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>R for Reproducible Scientific Analysis</td> </tr>
+      <tr> <td>11:00</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/">R for Reproducible Scientific Analysis</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
+      <tr> <td>13:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2/index.html#:~:text=Factors">R for Reproducible Scientific Analysis (Continued)</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
+      <tr> <td>15:00</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/">R for Reproducible Scientific Analysis (Continued)</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
       <tr> <td>16:40</td>  <td>END</td> </tr>
@@ -32,13 +32,13 @@
   </div class="col-md-6">
       <h3>Day 3</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>R for Reproducible Scientific Analysis</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/">R for Reproducible Scientific Analysis</td> </tr>
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
-      <tr> <td>11:00</td>  <td>R for Reproducible Scientific Analysis (Continued</td> </tr>
+      <tr> <td>11:00</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/">R for Reproducible Scientific Analysis (Continued</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
+      <tr> <td>13:00</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/">R for Reproducible Scientific Analysis (Continued)</td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
+      <tr> <td>15:00</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/">R for Reproducible Scientific Analysis (Continued)</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
       <tr> <td>16:40</td>  <td>END</td> </tr>
