--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -7,11 +7,8 @@
       <tr> <td>10:30</td>  <td>Morning break</td> </tr>
       <tr> <td>11:00</td>  <td>Automating Tasks with the Unix Shell (Continued)</td> </tr>
       <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Automating Tasks with the Unix Shell (Continued</td> </tr>
-      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
-      <tr> <td>15:00</td>  <td>Automating Tasks with the Unix Shell (Continued</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>13:00</td>  <td>END</td> </tr>
+      
     </table>
   </div>
   <div class="col-md-6">
@@ -25,8 +22,8 @@
       <tr> <td>11:20</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
       <tr> <td>12:10</td>  <td>Break</td> </tr>
       <tr> <td>12:20</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
-      <tr> <td>12:25</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>12:30</td>  <td>END</td> </tr>
+      <tr> <td>12:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>13:00</td>  <td>END</td> </tr>
       <tr> <td></td>  <td></td> </tr>
       <tr> <td></td>  <td></td> </tr>
       <tr> <td></td>  <td></td> </tr>
@@ -38,12 +35,13 @@
       <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2/index.html#:~:text=Factors">R for Reproducible Scientific Analysis (Continued) - Exploring DataFrames (Factors)</a></td> </tr>
       <tr> <td>10:10</td>  <td>Break</td> </tr>
       <tr> <td>10:20</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
-      <tr> <td>11:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>11:10</td>  <td>END</td> </tr>
+      <tr> <td>11:30</td>  <td>Break</td> </tr>
+      <tr> <td>11:45</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
+      <tr> <td>12:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>13:00</td>  <td>END</td> </tr>
       <tr> <td></td>  <td></td> </tr>
       <tr> <td></td>  <td></td> </tr>
       <tr> <td></td>  <td></td> </tr>
     </table>
   </div>
-  <div class="col-md-6">
-  </div>
+ 
