Converted to a Python Workshop

--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -15,13 +15,13 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td>Arrival and Set-up</td> </tr>
-      <tr> <td>09:20</td>  <td><a href="http://swcarpentry.github.io/r-novice-gapminder/">R for Reproducible Scientific Analysis</a></td> </tr>
+      <tr> <td>09:20</td>  <td><a href="https://datacarpentry.org/python-socialsci/">Data Analysis and Visualization with Python for Social Scientists</a></td> </tr>
       <tr> <td>10:10</td>  <td>Break</td> </tr>
-      <tr> <td>10:20</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
+      <tr> <td>10:20</td>  <td><a href="https://datacarpentry.org/python-socialsci/">Data Analysis and Visualization with Python for Social Scientists(Continued)</a></td> </tr>
       <tr> <td>11:10</td>  <td>Break</td> </tr>
-      <tr> <td>11:20</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
+      <tr> <td>11:20</td>  <td><a href="https://datacarpentry.org/python-socialsci/">Data Analysis and Visualization with Python for Social Scientists(Continued)</a></td> </tr>
       <tr> <td>12:10</td>  <td>Break</td> </tr>
-      <tr> <td>12:20</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
+      <tr> <td>12:20</td>  <td><a href="https://datacarpentry.org/python-socialsci/">Data Analysis and Visualization with Python for Social Scientists(Continued)</a></td> </tr>
       <tr> <td>12:45</td>  <td>Wrap-up</td> </tr>
       <tr> <td>13:00</td>  <td>END</td> </tr>
       
@@ -30,11 +30,11 @@
   <div class="col-md-6">
     <h3>Day 3</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/r-novice-gapminder/05-data-structures-part2/index.html#:~:text=Factors">R for Reproducible Scientific Analysis (Continued) - Exploring DataFrames (Factors)</a></td> </tr>
+      <tr> <td>09:00</td>  <td><a href="https://datacarpentry.org/python-socialsci/">Data Analysis and Visualization with Python for Social Scientists(Continued)</a></td> </tr>
       <tr> <td>10:10</td>  <td>Break</td> </tr>
-      <tr> <td>10:20</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
+      <tr> <td>10:20</td>  <td><a href="https://datacarpentry.org/python-socialsci/">Data Analysis and Visualization with Python for Social Scientists(Continued)</a></td> </tr>
       <tr> <td>11:30</td>  <td>Break</td> </tr>
-      <tr> <td>11:45</td>  <td>R for Reproducible Scientific Analysis (Continued)</td> </tr>
+      <tr> <td>11:45</td>  <td><a href="https://datacarpentry.org/python-socialsci/">Data Analysis and Visualization with Python for Social Scientists(Continued)</a></td> </tr>
       <tr> <td>12:45</td>  <td>Wrap-up</td> </tr>
       <tr> <td>13:00</td>  <td>END</td> </tr>
      
