--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -32,7 +32,7 @@
     <table class="table table-striped">
       <tr> <td>09:00</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python(Continued)</a></td> </tr>
       <tr> <td>10:10</td>  <td>Break</td> </tr>
-      <tr> <td>10:20</td>  <td><a href=""https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python(Continued)</a></td> </tr>
+      <tr> <td>10:20</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python(Continued)</a></td> </tr>
       <tr> <td>11:30</td>  <td>Break</td> </tr>
       <tr> <td>11:45</td>  <td><a href="https://swcarpentry.github.io/python-novice-inflammation/">Programming with Python(Continued)</a></td> </tr>
       <tr> <td>12:45</td>  <td>Wrap-up</td> </tr>
